--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,6 +3,53 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="layout/main.html">
 
 <div layout:fragment="main-content">
-    nn
+<!--    <h5 for="dateInput" th:text="${#dates.format(date, 'dd  MMMM')}"></h5>-->
+    <label for="dateInputStart">Выберите даты</label>
+    <form class="d-flex " method="post" th:action="@{'/'}">
+        <input required name="dateStart" type="date" class="form-input mt-3" id="dateInputStart">
+        <input required name="dateEnd" type="date" class="form-input mt-3" id="dateInputEnd">
+        <button class="btn form-input btn-outline-secondary mt-3 ms-2">Выбрать</button>
+    </form>
+
+    <table class="table table-hover mt-3 table-bordered">
+        <tbody>
+        <tr>
+            <td class="align-middle text-center" style="width: 50%;">Постоянный покупатель</td>
+            <td class="align-middle text-center">0</td>
+        </tr>
+        <tr>
+            <td class="align-middle text-center">Оптовик</td>
+            <td class="align-middle text-center">0</td>
+        </tr>
+        <tr>
+            <td class="align-middle text-center">По рекомендации</td>
+            <td class="align-middle text-center">0</td>
+        </tr>
+        <tr>
+            <td class="align-middle text-center">Яндекс</td>
+            <td class="align-middle text-center">0</td>
+        </tr>
+        <tr>
+            <td class="align-middle text-center">Google</td>
+            <td class="align-middle text-center">0</td>
+        </tr>
+        <tr>
+            <td class="align-middle text-center">Instagram</td>
+            <td class="align-middle text-center">0</td>
+        </tr>
+        <tr>
+            <td class="align-middle text-center">Tik tok</td>
+            <td class="align-middle text-center">0</td>
+        </tr>
+        <tr>
+            <td class="align-middle text-center">YouTube</td>
+            <td class="align-middle text-center">0</td>
+        </tr>
+        <tr>
+            <td class="align-middle text-center">2GIS</td>
+            <td class="align-middle text-center">0</td>
+        </tr>
+        </tbody>
+    </table>
 </div>
 </html>
