--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,11 +3,10 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="layout/main.html">
 
 <div layout:fragment="main-content">
-<!--    <h5 for="dateInput" th:text="${#dates.format(date, 'dd  MMMM')}"></h5>-->
     <label for="dateInputStart">Выберите даты</label>
-    <form class="d-flex " method="post" th:action="@{'/'}">
-        <input required name="dateStart" type="date" class="form-input mt-3" id="dateInputStart">
-        <input required name="dateEnd" type="date" class="form-input mt-3" id="dateInputEnd">
+    <form class="d-flex " method="post" th:action="@{'/between_date'}">
+        <input th:value="${date1}" required name="date1" type="date" class="form-input mt-3" id="dateInputStart">
+        <input th:value="${date2}" required name="date2" type="date" class="form-input mt-3" id="dateInputEnd">
         <button class="btn form-input btn-outline-secondary mt-3 ms-2">Выбрать</button>
     </form>
 
@@ -15,39 +14,39 @@
         <tbody>
         <tr>
             <td class="align-middle text-center" style="width: 50%;">Постоянный покупатель</td>
-            <td class="align-middle text-center">0</td>
+            <td class="align-middle text-center" th:text="${clickCount.getRegularCustomer()}"></td>
         </tr>
         <tr>
             <td class="align-middle text-center">Оптовик</td>
-            <td class="align-middle text-center">0</td>
+            <td class="align-middle text-center" th:text="${clickCount.getWholesale()}"></td>
         </tr>
         <tr>
             <td class="align-middle text-center">По рекомендации</td>
-            <td class="align-middle text-center">0</td>
+            <td class="align-middle text-center" th:text="${clickCount.getRecommended()}"></td>
         </tr>
         <tr>
             <td class="align-middle text-center">Яндекс</td>
-            <td class="align-middle text-center">0</td>
+            <td class="align-middle text-center" th:text="${clickCount.getYandex()}"></td>
         </tr>
         <tr>
             <td class="align-middle text-center">Google</td>
-            <td class="align-middle text-center">0</td>
+            <td class="align-middle text-center" th:text="${clickCount.getGoogle()}"></td>
         </tr>
         <tr>
             <td class="align-middle text-center">Instagram</td>
-            <td class="align-middle text-center">0</td>
+            <td class="align-middle text-center" th:text="${clickCount.getInstagram()}"></td>
         </tr>
         <tr>
             <td class="align-middle text-center">Tik tok</td>
-            <td class="align-middle text-center">0</td>
+            <td class="align-middle text-center" th:text="${clickCount.getTikTok()}"></td>
         </tr>
         <tr>
             <td class="align-middle text-center">YouTube</td>
-            <td class="align-middle text-center">0</td>
+            <td class="align-middle text-center" th:text="${clickCount.getYoutube()}"></td>
         </tr>
         <tr>
             <td class="align-middle text-center">2GIS</td>
-            <td class="align-middle text-center">0</td>
+            <td class="align-middle text-center" th:text="${clickCount.getTwogis()}"></td>
         </tr>
         </tbody>
     </table>
